# xml-lib

./: .gitignore  .mutmut_config.py  .pre-commit-config.yaml  ARTIFACTS.md  CHANGELOG.md  CONTRACTS.md  CONTRIBUTING.md  DELIVERY_SUMMARY.md  IMPLEMENTATION_PLAN.md  MIGRATION.md  Makefile  PHASE1_SUMMARY.md  PRIORITY1_SUMMARY.md  README.md  README_NEW.md  coverage.xml  demo_engine.py  example_amphibians.xml  example_document.xml  example_research_pitch.xml  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
cli/xml_lib/: __init__.py  assertions.py  cli.py  differ.py  engine_wrapper.py  formal_verification.py  guardrails.py  pptx_composer.py  proof_visualization.py  publisher.py  sanitize.py  telemetry.py  types.py  validator.py
cli/xml_lib/engine/: __init__.py  fixed_points.py  operators.py  proofs.py  spaces.py
cli/xml_lib/php/: __init__.py  generator.py  ir.py  parser.py
docs/: INTERACTIVE_GUIDE.md  PIPELINE_DESIGN.md  PIPELINE_GUIDE.md  STREAMING_BENCHMARKS.md  STREAMING_GUIDE.md  api.md
docs/adr/: 001-z3-formal-verification.md  002-proof-tree-visualization.md  003-property-based-testing.md  004-phase1-test-coverage-strategy.md  README.md
document/pptx/: architecture.xml  checks.xml  workflows.xml
examples/interactive/: README.md
examples/interactive/01-shell-basics/: README.md
examples/interactive/02-watch-mode/: README.md
examples/interactive/03-custom-config/: README.md
examples/pipelines/: README.md
examples/pipelines/01-basic-validation/: README.md  pipeline.yaml  run.sh
examples/pipelines/01-basic-validation/input/: sample-valid.xml
examples/programmatic/: 01_basic_validation.py  02_batch_processing.py  03_custom_workflow.py  README.md
guardrails/: lifecycle-integrity.xml
lib/: begin.xml  continuum.xml  end.xml  iteration.xml  start.xml
lib/engine/: axioms.xml  hilbert.xml  operators.xml  proof.xml  spaces.xml
lib/engine/hilbert/: blueprint.xml  fixed_points.xml  index.xml  layers.xml  operators.xml
lib/guardrails/: begin.xml  end.xml  middle.xml
schemas/: guardrails.rng  lifecycle.rng  lifecycle.sch
schemas/xslt/: default.xsl  mathy-to-mathml.xsl  restore-mathy.xsl
scripts/: bash_completion.sh  build_pptx.sh  install_completions.sh  zsh_completion.zsh
templates/php/: footer.php.j2  functions.php.j2  header.php.j2  minimal_page.php.j2  page.php.j2  style.css.j2  toc.php.j2
templates/pipelines/: README.md  ci-validation.yaml  config-validation.yaml  rss-feed.yaml  schema-migration.yaml  soap-validation.yaml
tests/: __init__.py  test_api.py  test_assertions.py  test_cli_integration.py  test_cli_new.py  test_differ.py  test_differ_mathy_equivalence.py  test_engine.py  test_engine_benchmarks.py  test_engine_properties.py  test_engine_wrapper.py  test_formal_verification.py  test_guardrails_comprehensive.py  test_interactive.py  test_lifecycle.py  test_linter.py  test_php_xxe_protection.py  test_phpify.py  test_pipeline_context.py  test_pipeline_engine.py  test_pipeline_loader.py  test_pipeline_stages.py  test_pptx.py  test_proof_visualization.py  test_properties.py  test_property_based.py  test_publisher.py  test_sanitize.py  test_schema.py  test_schema_comprehensive.py  test_streaming_benchmark.py  test_streaming_checkpoint.py  test_streaming_equivalence.py  test_streaming_generator.py  test_streaming_parser.py  test_streaming_validator.py  test_types.py  test_validator.py  test_validator_math_symbols.py
tests/benchmark/: __init__.py  test_shims_exist.py  test_validator_benchmark.py
tests/fixtures/: invalid_amphibians.xml  valid_lifecycle.xml
xml_lib/: __init__.py  api.py  cli.py  cli_new.py  engine_wrapper.py  exceptions.py  formal_verification.py  lifecycle.py  linter.py  pptx_composer.py  proof_visualization.py  publisher.py  sanitize.py  schema.py  storage.py  types.py  validator.py
xml_lib/engine/: __init__.py  fejer.py  fixed_points.py  integration.py  norms.py  operators.py  parser.py  proofs.py  spaces.py
xml_lib/guardrails/: __init__.py  checksum.py  engine.py  policy.py  simulator.py  transpiler.py
xml_lib/interactive/: __init__.py  completer.py  config.py  output.py  shell.py  watcher.py
xml_lib/php/: __init__.py  generator.py  ir.py  parser.py
xml_lib/pipeline/: __init__.py  context.py  engine.py  loader.py  stages.py
xml_lib/pptx/: __init__.py  builder.py  exporter.py  parser.py
xml_lib/streaming/: __init__.py  benchmark.py  checkpoint.py  generator.py  parser.py  validator.py
xml_lib/transforms/: __init__.py  normalize.py  xpath.py  xslt.py
xml_lib/utils/: __init__.py  cache.py  logging.py  xml_utils.py
